Add forgejo compose to applications compose.

--- a/docker-compose.applications.yml
+++ b/docker-compose.applications.yml
@@ -3,3 +3,4 @@ include:
   - services/applications/whoami-compose.yaml
   - services/applications/whoami-admin-compose.yaml
   - services/applications/vaultwarden-compose.yaml
+  - services/applications/forgejo-compose.yaml
